# VSCode

./: .gitignore  Main.py  README.md  SKILL.md  config.py  requirements.txt
.claude/: settings.local.json  sprightly-wondering-matsumoto.md
UrsusSiem/: .env.example  (+10 more)
UrsusSiem/logvault-rust/: Cargo.toml  Dockerfile
UrsusSiem/logvault-rust/src/: main.rs
UrsusSiem/logvault-rust/src/anomaly/: beaconing.rs  detector.rs  mod.rs  ueba.rs
UrsusSiem/logvault-rust/src/correlator/: sigma.rs
UrsusSiem/logvault-rust/src/models/: mod.rs
UrsusSiem/logvault-rust/src/ocsf/: mod.rs
UrsusSiem/logvault-rust/src/parser/: enrichment.rs  formats.rs  mod.rs
UrsusSiem/logvault-rust/src/pdql/: mod.rs  translator.rs
UrsusSiem/logvault-rust/src/threat_intel/: feeds.rs
backend/: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/docs/superpowers/plans/: 2026-05-27-ursus-foundation.md  2026-05-31-ursus-persistence-kernel.md
backend/docs/superpowers/specs/: 2026-05-27-ursus-module-skeleton-design.md  2026-05-31-ursus-event-and-persistence-contracts.md
backend/src/ursus/: __init__.py  _version.py  consumer_app.py  http_app.py  scheduler_app.py
backend/src/ursus/application/common/events/: integration_event.py
backend/src/ursus/application/common/ports/: inbox.py  integration_event_publisher.py  outbox.py  unit_of_work.py
backend/src/ursus/domain/common/: aggregate_root.py  entity.py  entity_id.py  value_object.py
backend/src/ursus/infrastructure/event_bus/: serializer.py
backend/src/ursus/infrastructure/mappers/: registry.py
backend/src/ursus/infrastructure/persistence/: engine.py  inbox_store.py  outbox_store.py  schemas.py  unit_of_work.py
backend/src/ursus/infrastructure/persistence/migrations/: env.py
backend/src/ursus/infrastructure/persistence/migrations/versions/: 0001_messaging.py
backend/src/ursus/infrastructure/persistence/models/common/: inbox.py  outbox.py
backend/src/ursus/setup/: ioc.py  settings.py
backend/tests/: conftest.py
backend/tests/integration/infrastructure/persistence/: test_migrations.py  test_stores.py  test_unit_of_work.py
backend/tests/integration/presentation/: test_healthcheck.py
backend/tests/integration/setup/: test_ioc.py  test_persistence_provider.py
backend/tests/unit/application/common/events/: test_integration_event.py
backend/tests/unit/application/common/ports/: test_ports.py
backend/tests/unit/domain/common/: test_aggregate_root.py  test_domain_event.py  test_entity.py  test_entity_id.py  test_value_object.py
backend/tests/unit/infrastructure/event_bus/: test_serializer.py
backend/tests/unit/infrastructure/mappers/: test_registry.py
backend/tests/unit/infrastructure/persistence/: test_base.py  test_engine.py  test_models.py
backend/tests/unit/setup/: test_settings.py
(+508 files in other folders)
