[package]
name = "logvault-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance log parsing and correlation engine for URSUS SIEM"

[[bin]]
name = "logvault-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum is zero-cost + async)
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex (compiled once via LazyLock for max perf)
regex = "1"
once_cell = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "json",
] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config from env
dotenvy = "0.15"

# IP subnet matching
ipnet = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
